# orthagonalize

./: .gitignore  README.md  pyproject.toml
orthagonalize/: __init__.py  __main__.py  config.py  entrypoint.py  generate.py  marker_detector.py
