[tool.poetry]
name = "orthagonalize"
version = "0.1.0"
description = ""
authors = ["Emanuel Knecht <emanuel.knecht@scs.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-contrib-python = "^4.7.0.68"
img2pdf = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
